// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render MemberOptionsMenu should not render menu if I am member 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "marginHorizontal": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingLeft": 14,
      "paddingVertical": 14,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 6,
    }
  }
  testID="CommunityMemberItem"
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            Object {
              "backgroundColor": "rgb(123, 155, 152)",
            },
            Object {
              "marginRight": 8,
            },
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
                "fontWeight": "300",
              },
            ],
          ]
        }
      >
        F
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
            },
          ]
        }
      >
        Firstname
      </Text>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
              },
            ]
          }
        >
          Member since
           
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            April 2020
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`render MemberOptionsMenu should not render menu if person is owner 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "marginHorizontal": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingLeft": 14,
      "paddingVertical": 14,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 6,
    }
  }
  testID="CommunityMemberItem"
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            Object {
              "backgroundColor": "rgb(123, 155, 152)",
            },
            Object {
              "marginRight": 8,
            },
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
                "fontWeight": "300",
              },
            ],
          ]
        }
      >
        F
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
            },
          ]
        }
      >
        Firstname
      </Text>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
              },
            ]
          }
        >
          Owner
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontWeight": "bold",
                  },
                  undefined,
                ],
              ]
            }
          >
             · 
          </Text>
          Admin
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontWeight": "bold",
                  },
                  undefined,
                ],
              ]
            }
          >
             · 
          </Text>
          Member since
           
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            April 2020
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`render MemberOptionsMenu should render menu if I am admin and person is not owner 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "marginHorizontal": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingLeft": 14,
      "paddingVertical": 14,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 6,
    }
  }
  testID="CommunityMemberItem"
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            Object {
              "backgroundColor": "rgb(123, 155, 152)",
            },
            Object {
              "marginRight": 8,
            },
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
                "fontWeight": "300",
              },
            ],
          ]
        }
      >
        F
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
            },
          ]
        }
      >
        Firstname
      </Text>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
              },
            ]
          }
        >
          Member since
           
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            April 2020
          </Text>
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="IconButton"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "height": 32,
                "width": 32,
              },
            ],
            null,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "margin": 10,
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "margin": 0,
                      "paddingHorizontal": 10,
                    },
                    undefined,
                  ],
                ],
              ],
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`render MemberOptionsMenu should render menu if person is me 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "marginHorizontal": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingLeft": 14,
      "paddingVertical": 14,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 6,
    }
  }
  testID="CommunityMemberItem"
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            Object {
              "backgroundColor": "rgb(199, 154, 115)",
            },
            Object {
              "marginRight": 8,
            },
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
                "fontWeight": "300",
              },
            ],
          ]
        }
      >
        F
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
            },
          ]
        }
      >
        Firstname
      </Text>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
              },
            ]
          }
        >
          Member since
           
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            April 2020
          </Text>
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="IconButton"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "height": 32,
                "width": 32,
              },
            ],
            null,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "margin": 10,
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "margin": 0,
                      "paddingHorizontal": 10,
                    },
                    undefined,
                  ],
                ],
              ],
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`render contacts count user created org should render admin permissions 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "marginHorizontal": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingLeft": 14,
      "paddingVertical": 14,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 6,
    }
  }
  testID="CommunityMemberItem"
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            Object {
              "backgroundColor": "rgb(123, 155, 152)",
            },
            Object {
              "marginRight": 8,
            },
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
                "fontWeight": "300",
              },
            ],
          ]
        }
      >
        F
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
            },
          ]
        }
      >
        Firstname
      </Text>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
              },
            ]
          }
        >
          Admin
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontWeight": "bold",
                  },
                  undefined,
                ],
              ]
            }
          >
             · 
          </Text>
          Member since
           
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            April 2020
          </Text>
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="IconButton"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "height": 32,
                "width": 32,
              },
            ],
            null,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "margin": 10,
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "margin": 0,
                      "paddingHorizontal": 10,
                    },
                    undefined,
                  ],
                ],
              ],
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`render contacts count user created org should render member permissions 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "marginHorizontal": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingLeft": 14,
      "paddingVertical": 14,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 6,
    }
  }
  testID="CommunityMemberItem"
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            Object {
              "backgroundColor": "rgb(123, 155, 152)",
            },
            Object {
              "marginRight": 8,
            },
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
                "fontWeight": "300",
              },
            ],
          ]
        }
      >
        F
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
            },
          ]
        }
      >
        Firstname
      </Text>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
              },
            ]
          }
        >
          Member since
           
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            April 2020
          </Text>
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="IconButton"
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "height": 32,
                "width": 32,
              },
            ],
            null,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "margin": 10,
                  },
                  Array [
                    Object {
                      "color": "#B2B0B2",
                      "margin": 0,
                      "paddingHorizontal": 10,
                    },
                    undefined,
                  ],
                ],
              ],
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`render contacts count user created org should render owner permissions 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "marginHorizontal": 0,
      "marginVertical": 4,
      "opacity": 1,
      "paddingLeft": 14,
      "paddingVertical": 14,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 6,
    }
  }
  testID="CommunityMemberItem"
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            Object {
              "backgroundColor": "rgb(123, 155, 152)",
            },
            Object {
              "marginRight": 8,
            },
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 20,
                "fontWeight": "300",
              },
            ],
          ]
        }
      >
        F
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
            },
          ]
        }
      >
        Firstname
      </Text>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#B4B6BA",
                "fontSize": 12,
              },
            ]
          }
        >
          Owner
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontWeight": "bold",
                  },
                  undefined,
                ],
              ]
            }
          >
             · 
          </Text>
          Admin
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "fontWeight": "bold",
                  },
                  undefined,
                ],
              ]
            }
          >
             · 
          </Text>
          Member since
           
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 12,
                },
              ]
            }
            testID="Text"
          >
            April 2020
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;
